Some more fixes to button on mobile, Web App a bit more Flexible now and adjusts itself to different screen sizes

--- a/style.css
+++ b/style.css
@@ -90,12 +90,15 @@ nav{
 
 .nav-links a > div{
   /* border-radius: 11px; */
-  justify-content: center;
-  text-align: center;
-  align-items:stretch;
-  padding-top: 6px;
-  height: 30px;
-  width: 90px;
+  /* justify-content: center;
+  text-align: center; */
+  display: grid;
+  place-content: center;
+  /* padding-top: 6px; */
+  /* height: 30px;
+  width: 90px; */
+  min-height: 1.8rem;
+  width: 6rem;
   transition: box-shadow 0.5s, border-radius 0.5s;
 }
 .nav-links a > div:hover{
@@ -157,9 +160,11 @@ nav{
   }
 
   .nav-links a > div{
+    display: grid;
     border-radius: 11px;
-    padding-top: 20%;
-    height: 50px;
+    place-content: center;
+    /* padding-top: 20%; */
+    height: 5rem;
   }
 
   .mobile-nav-toggle{
@@ -169,13 +174,13 @@ nav{
     background-color: transparent;
     background-image: url("assets/hamburger-icon.svg");
     background-repeat: no-repeat;
-    width: 2rem;
+    width: 5rem;
     border: none;
     aspect-ratio: 1;
-    /* top: 1rem; */
+    top: -0.3rem;
     right: 2rem;
+    transition: all 0.5s;
   }
-
   .mobile-nav-toggle[aria-expanded= "true"]{
     background-image: url("assets/close-icon.svg");
   }
@@ -190,5 +195,122 @@ nav{
   .nav-links a{
     background: hsl(0, 0%, 100%, 0.2);
     backdrop-filter: blur(0.3rem);
+  }
+}
+
+@media screen and (max-width: 31rem){
+  .mobile-nav-toggle{
+    display: block;
+    position: absolute;
+    z-index: 9999;         /* Z-index specifies which layer this class will appear on the page */
+    background-color: transparent;
+    background-image: url("assets/hamburger-icon.svg");
+    background-repeat: no-repeat;
+    width: 3rem;
+    border: none;
+    aspect-ratio: 1;
+    top: 0.7rem;
+    right: 1rem;
+  }
+
+  .mobile-nav-toggle[aria-expanded= "true"]{
+    background-image: url("assets/close-icon.svg");
+  }
+}
+
+@media screen and (max-width: 31rem) and (max-height: 30rem){
+  .nav-links{
+    position: fixed;
+    z-index: 1000;
+    display: flex;
+    grid-row-gap: 0.5rem;
+    inset: 0 0 0 65%;
+    align-items: center;
+    flex-direction: column;
+    padding: min(25vh, 10rem) 2rem;
+    background: hsl(0, 0%, 100%, 0.4);
+    transform: translateX(100%);
+    transition: transform 350ms ease-in;
+  }
+
+  @supports (backdrop-filter: blur(0.3rem)) {
+    .nav-links{
+      background: hsl(0, 0%, 100%, 0.2);
+      backdrop-filter: blur(0.3rem);
+    }
+  }
+
+  .mobile-nav-toggle{
+    display: block;
+    position: absolute;
+    z-index: 9999;         /* Z-index specifies which layer this class will appear on the page */
+    background-color: transparent;
+    background-image: url("assets/hamburger-icon.svg");
+    background-repeat: no-repeat;
+    width: 3rem;
+    border: none;
+    aspect-ratio: 1;
+    top: 0.7rem;
+    right: 1rem;
+  }
+
+  .mobile-nav-toggle[aria-expanded= "true"]{
+    background-image: url("assets/close-icon.svg");
+  }
+
+  .nav-links a > div{
+    display: grid;
+    border-radius: 11px;
+    place-content: center;
+    /* padding-top: 20%; */
+    height: 2rem;
+  }
+}
+
+@media screen and (max-height: 30rem){
+  .nav-links{
+    position: fixed;
+    z-index: 1000;
+    display: flex;
+    grid-row-gap: 0.5rem;
+    inset: 0 0 0 65%;
+    align-items: center;
+    flex-direction: column;
+    padding: min(5vh, 10rem) 2rem;
+    background: hsl(0, 0%, 100%, 0.4);
+    transform: translateX(100%);
+  }
+
+  @supports (backdrop-filter: blur(0.3rem)) {
+    .nav-links{
+      background: hsl(0, 0%, 100%, 0.2);
+      backdrop-filter: blur(0.3rem);
+    }
+  }
+
+  .mobile-nav-toggle{
+    display: block;
+    position: absolute;
+    z-index: 9999;         /* Z-index specifies which layer this class will appear on the page */
+    background-color: transparent;
+    background-image: url("assets/hamburger-icon.svg");
+    background-repeat: no-repeat;
+    width: 3rem;
+    border: none;
+    aspect-ratio: 1;
+    top: 0.7rem;
+    right: 1rem;
+  }
+
+  .mobile-nav-toggle[aria-expanded= "true"]{
+    background-image: url("assets/close-icon.svg");
+  }
+
+  .nav-links a > div{
+    display: grid;
+    border-radius: 11px;
+    place-content: center;
+    /* padding-top: 20%; */
+    height: 2rem;
   }
 }
